--- a/style.css
+++ b/style.css
@@ -1,7 +1,51 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&display=swap');
 
+:root{
+    --primary-color: #000000;
+    --secondary-color: #FFD700; 
+    --background-color: #FFFFFF; 
+    --text-color: #FFFFFF; 
+}
 body{
+    background-color: var(--background-color);
+    color: var(--primary-color);
     margin: 0;
     padding: 0;
     font-family: 'Open Sans', sans-serif;
+}
+
+header{
+    background-color: var(--primary-color);
+    color: var(--text-color);
+    /* position:fixed; */
+}
+nav>ul>li{
+    transition: ease-in-out 1s;
+}
+nav>ul>li:hover{
+    color: var(--secondary-color);
+    opacity: 80%;
+}
+
+header>nav>ul>li a{
+    text-decoration: none;
+}
+
+
+.banner-container{
+    background-color: #ffd90025;
+    border-radius: 10px;
+}
+button{
+    background-color: var(--secondary-color);
+    color: var(--primary-color);
+    border: 1px solid var(--primary-color);
+    padding: 10px;
+    border-radius: 5px;
+    transition: ease 1s;
+}
+
+button:hover{
+    background-color: var(--primary-color);
+    color: var(--secondary-color);
 }
