responsive header and banner for mobile device

--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body{
 }
 
 header{
-    background-color: var(--primary-color);
+    background: var(--primary-color);
     color: var(--text-color);
     /* position:fixed; */
 }
